--- a/templates/basket.html
+++ b/templates/basket.html
@@ -1,4 +1,4 @@
-{% include 'footer2.html' %}
+{% include 'header.html' %}
 <section style="background-color: black;" class="d-flex justify-content-center align-items-center">
   <div class="container h-100 py-5">
     <div class="row df-flex justify-content-center">
