--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% include 'footer2.html' %}
+{% include 'header.html' %}
 <div class="container d-flex justify-content-center py-5" style="margin-top: 200px;">
 <form class="col-lg-3" method="POST" novalidate>
     <h1 class="text-white">sklep.com</h1>
