--- a/templates/products.html
+++ b/templates/products.html
@@ -1,4 +1,4 @@
-{% include "footer2.html" %}
+{% include "header.html" %}
 <style>
   .equal-sized-image {
     width: 500px; /* Dostosuj szerokość, aby pasowała do twoich potrzeb */
