--- a/templates/lackProduct.html
+++ b/templates/lackProduct.html
@@ -1,4 +1,4 @@
-{% include 'footer2.html' %}
+{% include 'header.html' %}
 
         <div class="d-flex align-items-center justify-content-center vh-100">
             <div class="text-center row">
