--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,4 +1,4 @@
-{% include 'footer2.html' %}
+{% include 'header.html' %}
 <div class="col-lg-12 df-flex justify-content-center mx-auto rounded-6" style="background-color: white; margin-top: 100px; margin-bottom: 150px; transform: scale(0.8);">
     <table id="myTable" class="display" style="width:100%;">
         <thead>
